я заебался с этими OPTIONS и прочими. нихуя не работает
